fixed overflow filters

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -162,11 +162,10 @@
   padding: 10px;
   // border-radius: 5px 0 0 5px;
   border: none;
-  width: 200px;
 }
 
 .search-bar button {
-  padding: 10px 20px;
+  padding: 8px 18px;
   border-radius: 0 5px 5px 0;
   border: none;
   background-color: darkgray;
@@ -183,7 +182,7 @@
 .autocomplete {
   position: absolute;
   background-color: #ffffff;
-  border: 1px solid #e0e0e0;
+  border: hidden;
   border-top: none;
   width: 200px;
   max-height: 500px;
